# poboy

./: .gitignore  CMakeLists.txt  Makefile
include/: poboy.h
include/gba/: cpu.h  video.h
src/: poboy.c
